force-app/main/default/objects/EnqixImportCSVParameters__c/EnqixImportCSVParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds all configuration parameters for defining CSV import settings</description>
    <label>Enqix Import CSV Parameters</label>
</CustomObject>