force-app/main/default/objects/EnqixImportCSVParameters__c/fields/Account_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Account_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Batch size for account imports.</description>
    <inlineHelpText>Batch size for account imports.</inlineHelpText>
    <label>Account Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>