force-app/main/default/objects/EnqixImportCSVParameters__c/fields/Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Delimiter__c</fullName>
    <defaultValue>&apos;,&apos;</defaultValue>
    <description>The delimiter on the import file.</description>
    <inlineHelpText>The delimiter on the import file.</inlineHelpText>
    <label>Delimiter</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>