force-app/main/default/objects/EnqixImportCSVParameters__c/fields/Line_break_UTF__c.field-meta.xml
<CustomField>
    <fullName>Line_break_UTF__c</fullName>
    <defaultValue>&apos;\r&apos;</defaultValue>
    <description>This field contains the UTF escaped value for the CSV file line break format. Values are: \r for Mac and Linux, \r\n for Windows generated files.</description>
    <inlineHelpText>This field contains the UTF escaped value for the CSV file line break format. Values are: \r for Mac and Linux, \r\n for Windows generated files.</inlineHelpText>
    <label>Line break UTF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>