force-app/main/default/objects/EnqixImportCSVParameters__c/fields/Orders_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Orders_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Orders Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>